--- a/index.html
+++ b/index.html
@@ -156,14 +156,16 @@
         </section>
         <section class="portafolio" id="portfolio">
             <h2 class="titulo">Mi portafolio</h2>
-            <div class="img_portafolio">
-                <img src="./Logos-Imágenes/Ejemplo2.png" alt="portafolio1">
-            </div>
-            <div class="img_portafolio">
-                <img src="./Logos-Imágenes/Ejemplo 1.png" alt="portafolio2">
-            </div>
-            <div class="img_portafolio">
-                <img src="./Logos-Imágenes/Ejemplo 3.png" alt="portafolio3">
+            <div class="portfolio_imgs">
+                <div class="img_portafolio">
+                    <img src="./Logos-Imágenes/Ejemplo2.png" alt="portafolio1">
+                </div>
+                <div class="img_portafolio">
+                    <img src="./Logos-Imágenes/Ejemplo 1.png" alt="portafolio2">
+                </div>
+                <div class="img_portafolio">
+                    <img src="./Logos-Imágenes/Ejemplo 3.png" alt="portafolio3">
+                </div>
             </div>
         </section>
         <section class="contactos" id="contacto">
